<resources>
    <string name="app_name">Elisia</string>
    <string name="elisia">Elisia</string>
    <string name="content_desc">gamabr logo e</string>
    <string name="garis_judul">garis judul</string>
    <string name="explore">Explore Indo</string>
    <string name="nesia">nesia</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="line1">By Sign In, you agree with Elisia\'s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and"> and </string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="remember_me">remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="hello">Hello</string>
    <string name="enter_username">enter username</string>
    <string name="i_am_ready">I am Ready</string>
    <string name="or">OR</string>
</resources>
