<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bgf"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logoElisia_UI"
        android:src="@drawable/logoe"
        android:contentDescription="@string/content_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/hello_UI"
        android:text="@string/hello"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/logoElisia_UI"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#fff"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/etEmailSignUp_UI"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="email"
        android:textColorHint="#fff"
        android:background="@drawable/bgedittext"
        android:hint="@string/enter_email"
        android:textSize="14sp"
        android:drawableStart="@drawable/icemail"
        android:drawablePadding="16dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="32dp"
        android:textColor="#fff"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_UI" />

    <EditText
        android:id="@+id/etPassSignUp_UI"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="password"
        android:textColorHint="#fff"
        android:background="@drawable/bgedittext"
        android:hint="@string/enter_password"
        android:textSize="14sp"
        android:drawableStart="@drawable/icpass"
        android:drawablePadding="16dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignUp_UI" />


    <EditText
        android:id="@+id/etVerifPassSignUp_UI"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="password"
        android:textColorHint="#fff"
        android:background="@drawable/bgedittext"
        android:hint="@string/enter_password"
        android:textSize="14sp"
        android:drawableStart="@drawable/icverifpass"
        android:drawablePadding="16dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassSignUp_UI" />


    <EditText
        android:id="@+id/etUsernameSignUp_UI"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="username"
        android:textColorHint="#fff"
        android:background="@drawable/bgedittext"
        android:hint="@string/enter_username"
        android:textSize="14sp"
        android:drawableStart="@drawable/icusername"
        android:drawablePadding="16dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVerifPassSignUp_UI" />

    <TextView
        android:id="@+id/tvOr_UI"
        android:text="@string/or"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/etUsernameSignUp_UI"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:id="@+id/linLayoutBawahSignUp_UI"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvOr_UI"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLoginTwitter_UI"
            android:background="@drawable/tw"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/btnLoginGoogle_UI"
            android:background="@drawable/go"
            android:layout_marginHorizontal="16dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/btnLoginFacebook_UI"
            android:background="@drawable/fb"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnGoSignUp_UI"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="88dp"
        android:text="@string/i_am_ready"
        android:textAllCaps="false"
        android:textColor="#ed213a"
        android:background="@drawable/btnpth"
        android:fontFamily="@font/poppins_semibold"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>