<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgl"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoElisia_UI"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="280dp"
        android:contentDescription="@string/content_desc"
        android:src="@drawable/logoe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/judul_UI"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="48sp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:fontFamily="@font/poppins"-->
<!--        android:text="@string/elisia"-->
<!--        android:textColor="#fff"-->
<!--        android:textSize="32sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/logoElisia_UI" />-->


<!--    <ImageView-->
<!--        android:id="@+id/garisJudul_UI"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="4dp"-->
<!--        android:contentDescription="@string/garis_judul"-->
<!--        android:src="@drawable/garis"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/judul_UI"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/judul_UI"-->
<!--        app:layout_constraintTop_toBottomOf="@id/judul_UI" />-->

    <ImageView
        android:id="@+id/tagline_UI"
        android:src="@drawable/taglinefix"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/logoElisia_UI"
        android:layout_width="180dp"
        android:layout_height="80dp"/>

    <LinearLayout
        android:id="@+id/linLayoutBawah_UI"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="36dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linLayoutBtnBawah_UI"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSignUp_UI"
                android:layout_weight="1"
                android:background="@drawable/btnpth"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp"
                android:textAllCaps="false"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#ed213a"
                android:layout_height="48dp"
                android:layout_width="100dp" />

            <Button
                android:id="@+id/btnSignIn_UI"
                android:background="@drawable/btnmerah"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#fff"
                android:textSize="18sp"
                android:layout_width="100dp"
                android:layout_height="48dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="12dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/deskAcc_UI"
                android:text="@string/line1"
                android:textColor="#fff"
                android:textSize="18sp"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/privacy_policy"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text=" and "
                    android:fontFamily="@font/poppins"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/terms_of_use"
                    android:fontFamily="@font/poppins"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>